<?xml version="1.0" encoding="UTF-8"?>
<resources>
	<string name="app_provider_description">Provider of tracscan to access data</string>
	<string name="app_provider_name">Provider of tracscan</string>
	<string name="common_create">Create</string>
	<string name="common_delete">Del</string>
	<string name="common_edit">Edit</string>
	<string name="dialog_delete_message">Are you sure you want to delete this item ?</string>
	<string name="dialog_delete_title">Delete</string>
	<string name="menu_item_create">Add</string>
	<string name="menu_item_delete">Delete</string>
	<string name="accounttype_type_invalid_field_error">Field type is invalid.</string>
	<string name="accounttype_type_label">type</string>
	<string name="itemprod_currentzone_dialog_title">Select currentZone</string>
	<string name="itemprod_currentzone_invalid_field_error">Field CurrentZone is invalid.</string>
	<string name="itemprod_currentzone_label">CurrentZone</string>
	<string name="itemprod_empty_list">ItemProd list is empty !</string>
	<string name="itemprod_error_create">ItemProd creation error…</string>
	<string name="itemprod_error_edit">ItemProd edition error…</string>
	<string name="itemprod_error_load">ItemProd loading error…</string>
	<string name="itemprod_items_dialog_title">Select items</string>
	<string name="itemprod_items_invalid_field_error">Field items is invalid.</string>
	<string name="itemprod_items_label">items</string>
	<string name="itemprod_label">ItemProd</string>
	<string name="itemprod_name_invalid_field_error">Field name is invalid.</string>
	<string name="itemprod_name_label">name</string>
	<string name="itemprod_not_found">No ItemProd found to display…</string>
	<string name="itemprod_order_invalid_field_error">Field Order is invalid.</string>
	<string name="itemprod_order_label">Order</string>
	<string name="menu_item_edit">Edit</string>
	<string name="menu_item_save">Save</string>
	<string name="itemprod_ordercustomer_dialog_title">Select orderCustomer</string>
	<string name="itemprod_ordercustomer_invalid_field_error">Field OrderCustomer is invalid.</string>
	<string name="itemprod_ordercustomer_label">OrderCustomer</string>
	<string name="itemprod_progress_load_message">ItemProd is loading…</string>
	<string name="itemprod_progress_load_relations_message">ItemProd related entities are loading...</string>
	<string name="itemprod_progress_load_relations_title">ItemProd related entities loading</string>
	<string name="itemprod_progress_load_title">ItemProd Loading progress</string>
	<string name="itemprod_progress_save_message">ItemProd is saving to database…</string>
	<string name="itemprod_progress_save_title">ItemProd save progress</string>
	<string name="itemprod_state_invalid_field_error">Field State is invalid.</string>
	<string name="itemprod_state_label">State</string>
	<string name="itemprod_updatedate_date_title">Select updateDate date</string>
	<string name="itemprod_updatedate_invalid_field_error">Field UpdateDate is invalid.</string>
	<string name="itemprod_updatedate_label">UpdateDate</string>
	<string name="itemprod_updatedate_time_title">Select updateDate time</string>
	<string name="itemstate_type_invalid_field_error">Field Type is invalid.</string>
	<string name="itemstate_type_label">Type</string>
	<string name="logprod_createdate_date_title">Select createDate date</string>
	<string name="logprod_createdate_invalid_field_error">Field CreateDate is invalid.</string>
	<string name="logprod_createdate_label">CreateDate</string>
	<string name="logprod_createdate_time_title">Select createDate time</string>
	<string name="logprod_empty_list">LogProd list is empty !</string>
	<string name="logprod_error_create">LogProd creation error…</string>
	<string name="logprod_error_edit">LogProd edition error…</string>
	<string name="logprod_error_load">LogProd loading error…</string>
	<string name="logprod_item_dialog_title">Select item</string>
	<string name="logprod_item_invalid_field_error">Field Item is invalid.</string>
	<string name="logprod_item_label">Item</string>
	<string name="logprod_itemlogged_dialog_title">Select itemLogged</string>
	<string name="logprod_itemlogged_invalid_field_error">Field ItemLogged is invalid.</string>
	<string name="logprod_itemlogged_label">ItemLogged</string>
	<string name="logprod_label">LogProd</string>
	<string name="logprod_not_found">No LogProd found to display…</string>
	<string name="logprod_progress_load_message">LogProd is loading…</string>
	<string name="logprod_progress_load_relations_message">LogProd related entities are loading...</string>
	<string name="logprod_progress_load_relations_title">LogProd related entities loading</string>
	<string name="logprod_progress_load_title">LogProd Loading progress</string>
	<string name="logprod_progress_save_message">LogProd is saving to database…</string>
	<string name="logprod_progress_save_title">LogProd save progress</string>
	<string name="logprod_state_invalid_field_error">Field State is invalid.</string>
	<string name="logprod_state_label">State</string>
	<string name="logprod_stateaction_invalid_field_error">Field StateAction is invalid.</string>
	<string name="logprod_stateaction_label">StateAction</string>
	<string name="logprod_user_dialog_title">Select user</string>
	<string name="logprod_user_invalid_field_error">Field User is invalid.</string>
	<string name="logprod_user_label">User</string>
	<string name="logprod_userlogged_dialog_title">Select userLogged</string>
	<string name="logprod_userlogged_invalid_field_error">Field UserLogged is invalid.</string>
	<string name="logprod_userlogged_label">UserLogged</string>
	<string name="logprod_zone_dialog_title">Select zone</string>
	<string name="logprod_zone_invalid_field_error">Field Zone is invalid.</string>
	<string name="logprod_zone_label">Zone</string>
	<string name="logprod_zonelogged_dialog_title">Select zoneLogged</string>
	<string name="logprod_zonelogged_invalid_field_error">Field ZoneLogged is invalid.</string>
	<string name="logprod_zonelogged_label">ZoneLogged</string>
	<string name="materialtype_type_invalid_field_error">Field type is invalid.</string>
	<string name="materialtype_type_label">type</string>
	<string name="orderprod_customer_invalid_field_error">Field customer is invalid.</string>
	<string name="orderprod_customer_label">customer</string>
	<string name="orderprod_empty_list">OrderProd list is empty !</string>
	<string name="orderprod_error_create">OrderProd creation error…</string>
	<string name="orderprod_error_edit">OrderProd edition error…</string>
	<string name="orderprod_error_load">OrderProd loading error…</string>
	<string name="orderprod_items_dialog_title">Select items</string>
	<string name="orderprod_items_invalid_field_error">Field items is invalid.</string>
	<string name="orderprod_items_label">items</string>
	<string name="orderprod_label">OrderProd</string>
	<string name="orderprod_login_invalid_field_error">Field login is invalid.</string>
	<string name="orderprod_login_label">login</string>
	<string name="orderprod_materialtype_invalid_field_error">Field materialType is invalid.</string>
	<string name="orderprod_materialtype_label">materialType</string>
	<string name="orderprod_not_found">No OrderProd found to display…</string>
	<string name="orderprod_producttype_invalid_field_error">Field productType is invalid.</string>
	<string name="orderprod_producttype_label">productType</string>
	<string name="orderprod_progress_load_message">OrderProd is loading…</string>
	<string name="orderprod_progress_load_relations_message">OrderProd related entities are loading...</string>
	<string name="orderprod_progress_load_relations_title">OrderProd related entities loading</string>
	<string name="orderprod_progress_load_title">OrderProd Loading progress</string>
	<string name="orderprod_progress_save_message">OrderProd is saving to database…</string>
	<string name="orderprod_progress_save_title">OrderProd save progress</string>
	<string name="orderprod_quantity_invalid_field_error">Field quantity is invalid.</string>
	<string name="orderprod_quantity_label">quantity</string>
	<string name="producttype_type_invalid_field_error">Field type is invalid.</string>
	<string name="producttype_type_label">type</string>
	<string name="uri_not_supported">URI not supported</string>
	<string name="user_empty_list">User list is empty !</string>
	<string name="user_error_create">User creation error…</string>
	<string name="user_error_edit">User edition error…</string>
	<string name="user_error_load">User loading error…</string>
	<string name="user_label">User</string>
	<string name="user_login_invalid_field_error">Field login is invalid.</string>
	<string name="user_login_label">login</string>
	<string name="user_not_found">No User found to display…</string>
	<string name="user_passwd_invalid_field_error">Field passwd is invalid.</string>
	<string name="user_passwd_label">passwd</string>
	<string name="user_progress_load_message">User is loading…</string>
	<string name="user_progress_load_relations_message">User related entities are loading...</string>
	<string name="user_progress_load_relations_title">User related entities loading</string>
	<string name="user_progress_load_title">User Loading progress</string>
	<string name="user_progress_save_message">User is saving to database…</string>
	<string name="user_progress_save_title">User save progress</string>
	<string name="user_type_invalid_field_error">Field type is invalid.</string>
	<string name="user_type_label">type</string>
	<string name="zone_empty_list">Zone list is empty !</string>
	<string name="zone_error_create">Zone creation error…</string>
	<string name="zone_error_edit">Zone edition error…</string>
	<string name="zone_error_load">Zone loading error…</string>
	<string name="zone_label">Zone</string>
	<string name="zone_name_invalid_field_error">Field name is invalid.</string>
	<string name="zone_name_label">name</string>
	<string name="zone_not_found">No Zone found to display…</string>
	<string name="zone_progress_load_message">Zone is loading…</string>
	<string name="zone_progress_load_relations_message">Zone related entities are loading...</string>
	<string name="zone_progress_load_relations_title">Zone related entities loading</string>
	<string name="zone_progress_load_title">Zone Loading progress</string>
	<string name="zone_progress_save_message">Zone is saving to database…</string>
	<string name="zone_progress_save_title">Zone save progress</string>
	<string name="zone_quantity_invalid_field_error">Field quantity is invalid.</string>
	<string name="zone_quantity_label">quantity</string>
</resources>
