<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<ScrollView 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" >
		<RelativeLayout
			android:id="@+id/logprod_data_layout"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_margin="10dp" >
			<TextView
				android:id="@+id/logprod_createdate_label"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/logprod_createdate_label"/>
			<TextView
				android:id="@+id/logprod_createdate"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textIsSelectable="true"
				android:layout_below="@+id/logprod_createdate_label" />
			<TextView
				android:id="@+id/logprod_stateaction_label"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/logprod_createdate"
				android:text="@string/logprod_stateaction_label"/>
			<TextView
				android:id="@+id/logprod_stateaction"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textIsSelectable="true"
				android:layout_below="@+id/logprod_stateaction_label" />
			<TextView
				android:id="@+id/logprod_zonelogged_label"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/logprod_stateaction"
				android:text="@string/logprod_zonelogged_label"/>
			<TextView
				android:id="@+id/logprod_zonelogged"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textIsSelectable="true"
				android:layout_below="@+id/logprod_zonelogged_label" />
			<TextView
				android:id="@+id/logprod_userlogged_label"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/logprod_zonelogged"
				android:text="@string/logprod_userlogged_label"/>
			<TextView
				android:id="@+id/logprod_userlogged"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textIsSelectable="true"
				android:layout_below="@+id/logprod_userlogged_label" />
			<TextView
				android:id="@+id/logprod_itemlogged_label"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/logprod_userlogged"
				android:text="@string/logprod_itemlogged_label"/>
			<TextView
				android:id="@+id/logprod_itemlogged"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textIsSelectable="true"
				android:layout_below="@+id/logprod_itemlogged_label" />
		</RelativeLayout>
	</ScrollView>
	<TextView
	    android:id="@+id/logprod_empty"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:gravity="center"
	    android:visibility="gone"
	    android:text="@string/logprod_not_found" />
</RelativeLayout>
