<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:harmony="http://schemas.android.com/apk/res/com.tactfactory.tracscan"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
   <TextView
    	android:id="@+id/orderprod_login_label"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/orderprod_login_label"/>
    <EditText
		android:id="@+id/orderprod_login"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="text"
		android:layout_below="@+id/orderprod_login_label" />
   <TextView
    	android:id="@+id/orderprod_producttype_label"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/orderprod_login"
	    android:text="@string/orderprod_producttype_label"/>
	<com.tactfactory.tracscan.harmony.widget.EnumSpinner
		android:id="@+id/orderprod_producttype"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
        android:layout_below="@+id/orderprod_producttype_label" />
   <TextView
    	android:id="@+id/orderprod_materialtype_label"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/orderprod_producttype"
	    android:text="@string/orderprod_materialtype_label"/>
	<com.tactfactory.tracscan.harmony.widget.EnumSpinner
		android:id="@+id/orderprod_materialtype"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
        android:layout_below="@+id/orderprod_materialtype_label" />
   <TextView
    	android:id="@+id/orderprod_quantity_label"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/orderprod_materialtype"
	    android:text="@string/orderprod_quantity_label"/>
    <EditText
		android:id="@+id/orderprod_quantity"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="number"
		android:layout_below="@+id/orderprod_quantity_label" />
    <TextView
    	android:id="@+id/orderprod_items_label"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/orderprod_quantity"
	    android:text="@string/orderprod_items_label"/>
    <com.tactfactory.tracscan.harmony.widget.MultiEntityWidget
        android:id="@+id/orderprod_items_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:layout_below="@+id/orderprod_items_label" />

	<com.tactfactory.tracscan.harmony.widget.ValidationButtons
    	android:id="@+id/orderprod_validation"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_below="@+id/orderprod_items_button" />
</RelativeLayout>
